tests/ui/zerosized.stderr
error[E0080]: could not evaluate static initializer
 --> tests/ui/zerosized.rs:7:1
  |
7 | #[distributed_slice]
  | ^^^^^^^^^^^^^^^^^^^^ evaluation panicked: assertion failed: ::linkme::__private::mem::size_of::<<[Unit] as
            ::linkme::__private::Slice>::Element>() > 0
